<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/medium_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_info_title"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/material_margin"
            android:text="@string/dialog_info_version"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/text_medium"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium_margin"
        android:text="@string/dialog_info_message"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/text_small"/>

    <TextView
        android:id="@+id/developerUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:textColor="@drawable/selector_developer"
        android:textSize="@dimen/text_small"
        tools:text="@string/dialog_info_developer"/>

</LinearLayout>