<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/material_margin"
    android:paddingEnd="@dimen/medium_margin"
    android:paddingStart="@dimen/medium_margin"
    android:paddingTop="@dimen/medium_margin">

    <TextView
        android:id="@+id/reminderTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium_margin"
        android:text="@string/dialog_reminder_title_add"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/text_medium"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/dateIcon"
            android:layout_width="0dp"
            android:layout_height="@dimen/picker_size"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="@dimen/material_margin"
            android:layout_weight="1"
            android:contentDescription="@string/description_date_picker"
            android:src="@drawable/selector_date"/>

        <ImageView
            android:id="@+id/timeIcon"
            android:layout_width="0dp"
            android:layout_height="@dimen/picker_size"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:contentDescription="@string/description_time_picker"
            android:src="@drawable/selector_time"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dateText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/material_margin"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/dialog_date_text"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/text_small"/>

        <TextView
            android:id="@+id/timeText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/dialog_time_text"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/text_small"/>

    </LinearLayout>

</LinearLayout>